<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:paddingBottom="16dp"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:orientation="vertical"
    android:clickable="true"
    app:cardElevation="20dp"
    android:focusable="true">

    <ImageView
        android:id="@+id/image_picture_card"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@id/container"
        app:layout_constraintStart_toStartOf="@id/container"
        />

    <TextView
        android:id="@+id/user_name_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/username"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@id/container"
        app:layout_constraintStart_toEndOf="@id/image_picture_card"
        app:layout_constraintTop_toTopOf="@id/container"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/user_surname_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usersurname"
        android:textSize="22sp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@id/container"
        app:layout_constraintStart_toEndOf="@id/user_name_card"
        app:layout_constraintTop_toTopOf="@id/container"
        app:layout_constraintVertical_bias="1.0" />
    <TextView
        android:id="@+id/user_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_26_years"
        android:textSize="22sp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@id/container"
        app:layout_constraintEnd_toEndOf="@id/container"
        app:layout_constraintTop_toTopOf="@id/container"
        app:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>